# textbook-dev

./: .gitignore  .gitmodules  README.md  backend.Dockerfile  docker-compose.dev.yaml  docker-compose.yaml  frontend.Dockerfile  requirements.txt
envs/: .env
iacapap_textbook_backend/: .gitignore  README.md  makefile  pyproject.toml
iacapap_textbook_backend/logs/: uvicorn_log.ini
iacapap_textbook_backend/src/: database.py  main.py  model.py
iacapap_textbook_backend/src/constant/: __init__.py  router.py
iacapap_textbook_backend/src/middleware/: utils.py
iacapap_textbook_backend/src/router/: __init__.py
iacapap_textbook_backend/src/router/v0/: __init__.py
iacapap_textbook_backend/src/router/v0/article/: __init__.py  crud.py  response.py  router.py  schema.py
iacapap_textbook_backend/src/router/v0/article/caption/: crud.py  response.py  router.py  schema.py
iacapap_textbook_backend/src/router/v0/article/image/: crud.py  response.py  router.py  test.py
iacapap_textbook_backend/src/router/v0/highlight/: crud.py  response.py  router.py  schema.py
iacapap_textbook_backend/src/router/v0/user/: crud.py  response.py  router.py  schema.py
iacapap_textbook_backend/src/schema/response/: common.py  error.py
iacapap_textbook_frontend/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.js
iacapap_textbook_frontend/src/: back.hooks.server.js
iacapap_textbook_frontend/src/routes/: +layout.svelte
iacapap_textbook_frontend/src/stores/: auth.js  docTab.js  highlight.js
nginx/: dev.Dockerfile  dev.conf
(+131 files in other folders)
