[tool.poetry]
name = "webwork1"
version = "0.1.0"
description = ""
authors = ["Jiho Kim"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
passlib = "^1.7.4"
pycryptodome = "^3.20.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"
pydantic = {extras = ["email"], version = "^2.6.4"}
bcrypt = "^4.1.2"
aiofiles = "^23.2.1"
bs4 = "^0.0.2"
lxml = "^5.2.1"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
